Add cinephile project description

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <nav>
 <ul>
 <li><a href="./resume.html">Resume</a>
+<li><a href="./projects/cinephile.md">Cinephile</a>
 </ul>
 </nav>
 </header>
