add blog entry on process timers - first draft

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 </ul>
 </nav>
 </header>
-<p>Hi I'm Yudi! Welcome to my blog.</p>
+<h2><a href="./blog/c-process-timers.md">Timing Processes in C</a></h2>
 </body>
 </html>
