add new blog article

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 <head>
 <meta charset="utf-8" />
-<title>Yudhishthir Singh</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Yudhishthir Singh</title>
 <meta name="author" content="Yudhishthir Singh" />
 <meta name="keywords" content="Personal Website" />
 </head>
@@ -18,5 +18,6 @@
 </nav>
 </header>
 <h2><a href="./blog/c-process-timers.md">Timing Processes in C</a></h2>
+<h2><a href="./blog/temp.md">Binary, Hex etc.</a></h2>
 </body>
 </html>
