--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 <h1>Yudhishthir Singh</h1>
 <nav>
 <ul>
-<li><a href="./resume.html">Resume</a>
-<li><a href="./projects/cinephile.md">Cinephile</a>
+<li><a href="resume.html">Resume</a>
+<li><a href="projects/cinephile.md">Cinephile</a>
 </ul>
 </nav>
 </header>
-<h2><a href="./blog/c-process-timers.md">Timing Processes in C</a></h2>
-<h2><a href="./blog/temp.md">Binary, Hex etc.</a></h2>
+<h2><a href="/blog/c-process-timers.md">Timing Processes in C</a></h2>
+<h2><a href="/blog/temp.md">Binary, Hex etc.</a></h2>
+<h2><a href="/blog/rendering.md"></a>Rendering</h2>
+<h2><a href="/blog/books.md">Books</a></h2>
+<h2><a href="/blog/asm.md">ASM</a></h2>
 </body>
 </html>
