--- a/resume.html
+++ b/resume.html
@@ -12,17 +12,15 @@ body { font-size: 16px; line-height: 1.6rem; font-family: 'Roboto', sans-serif; 
 body, h1,  h2,  h3,  h4, ol, ul { margin-top: 0; margin-bottom: 0; padding: 0; }
 ul li, ol li { list-style-type: none; }
 section { margin-bottom: 1rem; }
-h2 { margin-top: 2rem; }
+h2, h3, h4 { margin-top: 2rem; }
 </style>
 </head>
 <body>
 <main>
 <header>
 <h1>Yudhishthir Singh</h1>
-ysingh0923@gmail.com
-205 219 5656
-https://github.com/ysingh
-https//linkedin.com/in/ysingh2
+<span>https://github.com/ysingh</span>
+<span>https://linkedin.com/in/ysingh2</span>
 </header>
 <section>
 <h2>Work Experience</h2>
