--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </header>
 <h2><a href="/blog/c-process-timers.md">Timing Processes in C</a></h2>
 <h2><a href="/blog/temp.md">Binary, Hex etc.</a></h2>
-<h2><a href="/blog/rendering.md"></a>Rendering</h2>
+<h2><a href="/blog/rendering.md">Rendering</a></h2>
 <h2><a href="/blog/books.md">Books</a></h2>
 <h2><a href="/blog/asm.md">ASM</a></h2>
 </body>
