--- a/index.html
+++ b/index.html
@@ -17,10 +17,17 @@
 </ul>
 </nav>
 </header>
+<main>
 <h2><a href="/blog/c-process-timers.md">Timing Processes in C</a></h2>
 <h2><a href="/blog/temp.md">Binary, Hex etc.</a></h2>
-<h2><a href="/blog/rendering.md">Rendering</a></h2>
+<!--<h2><a href="/blog/rendering.md">Rendering</a></h2>
 <h2><a href="/blog/books.md">Books</a></h2>
-<h2><a href="/blog/asm.md">ASM</a></h2>
+<h2><a href="/blog/asm.md">ASM</a></h2> -->
+</main>
+<footer>
+<a href="https://github.com/ysingh">Github</a>
+<a href="https://https://www.linkedin.com/in/ysingh2/">LinkedIn</a>
+<a href="https://stackoverflow.com/users/1229535/yudhishthir-singh">Stack Overflow</a>
+</footer>
 </body>
 </html>
