--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 <nav>
 <ul>
 <li><a href="resume.html">Resume</a>
-<li><a href="projects/cinephile.md">Cinephile</a>
 </ul>
 </nav>
 </header>
 <main>
 <h2><a href="/blog/c-process-timers.md">Timing Processes in C</a></h2>
-<h2><a href="/blog/temp.md">Binary, Hex etc.</a></h2>
+<h2><a href="/blog/rendering.md">Rendering Notes as I go along</a></h2>
 <!--<h2><a href="/blog/rendering.md">Rendering</a></h2>
 <h2><a href="/blog/books.md">Books</a></h2>
 <h2><a href="/blog/asm.md">ASM</a></h2> -->
