--- a/resume.html
+++ b/resume.html
@@ -6,9 +6,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="author" content="Yudhishthir Singh">
 <meta name="keywords" content="Software Engineer, Software Developer, Engineering Lead, Resume" />
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <style>
-body { font-size: 16px; line-height: 1.6rem; font-family: 'Roboto', sans-serif; margin-right: 2rem; margin-left: 2rem; }
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
+body { font-size: 16px; line-height: 1.6rem; font-family: 'Roboto Mono', sans-serif; margin-right: 2rem; margin-left: 2rem; background-color: darkslateblue; }
 body, h1,  h2,  h3,  h4, ol, ul { margin-top: 0; margin-bottom: 0; padding: 0; }
 ul li, ol li { list-style-type: none; }
 section { margin-bottom: 1rem; }
