--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
-    body { font-size: 16px; line-height: 1.6rem; font-family: 'Roboto Mono', sans-serif; margin-right: 2rem; margin-left: 2rem; background-color: rgb(23, 14, 82); }
+    body { font-size: 16px; line-height: 1.6rem; font-family: 'Roboto Mono', sans-serif; margin-right: 2rem; margin-left: 2rem; background-color: rgb(23, 14, 82); color: rgb(236, 215, 175) }
     body, h1,  h2,  h3,  h4, ol, ul { margin-top: 0; margin-bottom: 0; padding: 0; }
     ul li, ol li { list-style-type: none; }
     section { margin-bottom: 1rem; }
