--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
-    body { font-size: 16px; line-height: 1.6rem; font-family: 'Roboto Mono', sans-serif; margin-right: 2rem; margin-left: 2rem; background-color: rgb(23, 14, 82); color: rgb(236, 215, 175) }
+    body { font-size: 16px; line-height: 1.6rem; line-height: 1.8rem; font-family: 'Roboto Mono', sans-serif; margin-right: 2rem; margin-left: 2rem; margin-top: 2rem; background-color: rgba(23, 61, 84, 33); color: rgba(255, 244, 216, 100) }
     body, h1,  h2,  h3,  h4, ol, ul { margin-top: 0; margin-bottom: 0; padding: 0; }
     ul li, ol li { list-style-type: none; }
     section { margin-bottom: 1rem; }
@@ -26,15 +26,12 @@
 <h2><a href="/blog/ecs.md">ECS Notes</a></h2>
 <h2><a href="/blog/game-engine.md">Game Engine Notes</a></h2>
 <h2><a href="/blog/cpp">C Plus Plus Notes</a></h2>
-<!-- <h2><a href="/blog/rendering.md">Rendering Notes as I go along</a></h2> -->
-<!--<h2><a href="/blog/rendering.md">Rendering</a></h2>
-<h2><a href="/blog/books.md">Books</a></h2>
 <h2><a href="/blog/asm.md">ASM</a></h2> -->
 </main>
 <footer>
-<a href="https://github.com/ysingh">Github</a>
-<a href="https://www.linkedin.com/in/ysingh2/">LinkedIn</a>
-<a href="https://stackoverflow.com/users/1229535/yudhishthir-singh">Stack Overflow</a>
+<a href="//github.com/ysingh">Github</a>
+<a href="//www.linkedin.com/in/ysingh2/">LinkedIn</a>
+<a href="//stackoverflow.com/users/1229535/yudhishthir-singh">Stack Overflow</a>
 </footer>
 </body>
 </html>
