Move stylesheet to its own page

--- a/index.html
+++ b/index.html
@@ -6,27 +6,20 @@
 <title>Yudhishthir Singh</title>
 <meta name="author" content="Yudhishthir Singh" />
 <meta name="keywords" content="Personal Website" />
+<link href="styles.css" rel="stylesheet">
 </head>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
-    body { font-size: 16px; line-height: 1.6rem; line-height: 1.8rem; font-family: 'Roboto Mono', sans-serif; margin-right: 2rem; margin-left: 2rem; margin-top: 2rem; background-color: rgba(23, 61, 84, 33); color: rgba(255, 244, 216, 100) }
-    body, h1,  h2,  h3,  h4, ol, ul { margin-top: 0; margin-bottom: 0; padding: 0; }
-    ul li, ol li { list-style-type: none; }
-    section { margin-bottom: 1rem; }
-    h2, h3, h4 { margin-top: 2rem; }
-    footer { margin-top: 2em; }
 </style>
 <body>
 <header>
 <h1>Yudhishthir Singh</h1>
 </header>
 <main>
-<h2><a href="resume.html">Resume</a></h2>
-<h2><a href="/blog/c-process-timers.md">Timing Processes in C</a></h2>
-<h2><a href="/blog/ecs.md">ECS Notes</a></h2>
-<h2><a href="/blog/game-engine.md">Game Engine Notes</a></h2>
-<h2><a href="/blog/cpp">C Plus Plus Notes</a></h2>
-<h2><a href="/blog/asm.md">ASM</a></h2> -->
+<h2><a href="./resume.html">Resume</a></h2>
+<h2><a href="./blog/c-process-timers.md">Timing Processes in C</a></h2>
+<h2><a href="./blog/ecs.md">ECS Notes</a></h2>
+<h2><a href="./blog/game-engine.md">Game Engine Notes</a></h2>
+<h2><a href="./blog/cpp">C++ Notes</a></h2>
+<h2><a href="./blog/asm.md">ASM</a></h2>
 </main>
 <footer>
 <a href="//github.com/ysingh">Github</a>
