--- a/resume.html
+++ b/resume.html
@@ -6,16 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="author" content="Yudhishthir Singh">
 <meta name="keywords" content="Software Engineer, Software Developer, Engineering Lead, Resume" />
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
-    body { font-size: 16px; line-height: 1.6rem; line-height: 1.8rem; font-family: 'Roboto Mono', sans-serif; margin-right: 2rem; margin-left: 2rem; margin-top: 2rem; background-color: rgba(23, 61, 84, 33); color: rgba(255, 244, 216, 100) }
-    body, h1,  h2,  h3,  h4, ol, ul { margin-top: 0; margin-bottom: 0; padding: 0; }
-    ul li, ol li { list-style-type: none; }
-    section { margin-bottom: 1rem; }
-    h2, h3, h4 { margin-top: 2rem; }
-    h3 { border-top: 2rem solid; border-bottom: 2rem solid; color: rgba(255, 244, 216, 100); }
-    footer { margin-top: 2em; }
-</style>
+<link href="styles.css" rel="stylesheet">
 </head>
 <body>
 <main>
