--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </style>
 <body>
 <header>
-<h1>Yudhishthir Singh</h1>
+<h1>a href="index.html">Yudhishthir Singh</h1><a></h1>
 </header>
 <main>
 <h2><a href="./resume.html">Resume</a></h2>
 <h2><a href="./blog/c-process-timers.md">Timing Processes in C</a></h2>
 <h2><a href="./blog/ecs.md">ECS Notes</a></h2>
 <h2><a href="./blog/game-engine.md">Game Engine Notes</a></h2>
-<h2><a href="./blog/cpp">C++ Notes</a></h2>
+<h2><a href="./blog/cpp.md">C++ Notes</a></h2>
 <h2><a href="./blog/asm.md">ASM</a></h2>
 </main>
 <footer>
