--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 <meta name="author" content="Yudhishthir Singh" />
 <meta name="keywords" content="Personal Website" />
 <link href="styles.css" rel="stylesheet">
+<link rel="icon" type="image/x-icon" href="rando.ico">
 </head>
 </style>
 <body>
 <header>
-<h1>a href="index.html">Yudhishthir Singh</h1><a></h1>
+<h1><a href="index.html">Yudhishthir Singh<a></h1>
 </header>
 <main>
 <h2><a href="./resume.html">Resume</a></h2>
