clean up footer

--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 <body>
 <main>
 <header>
-<h1>Yudhishthir Singh</h1>
+<h1><a href="index.html">Yudhishthir Singh</a></h1>
 </header>
 <section>
 <h2>Work Experience</h2>
