--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <h2><a href="./blog/game-engine.md">Game Engine Notes</a></h2>
 <h2><a href="./blog/cpp.md">C++ Notes</a></h2>
 <h2><a href="./blog/asm.md">ASM</a></h2>
+<h2><a href="./projects/gamedevMaster.md">Gamedev</a></h2>
 </main>
 <footer>
 <a href="//github.com/ysingh">Github</a>
