Added page with health notes:

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 <h1><a href="index.html">Yudhishthir Singh<a></h1>
 </header>
 <main>
-<h2><a href="./resume.html">Resume</a></h2>
+    <h2><a href="/health.html">Health Notes</a></h2>
+<!-- <h2><a href="./resume.html">Resume</a></h2>
 <h2><a href="./blog/c-process-timers.md">Timing Processes in C</a></h2>
 <h2><a href="./blog/ecs.md">ECS Notes</a></h2>
 <h2><a href="./blog/game-engine.md">Game Engine Notes</a></h2>
 <h2><a href="./blog/cpp.md">C++ Notes</a></h2>
 <h2><a href="./blog/asm.md">ASM</a></h2>
-<h2><a href="./projects/gamedevMaster.md">Gamedev</a></h2>
+<h2><a href="./projects/gamedevMaster.md">Gamedev</a></h2> -->
 </main>
 <footer>
 <a href="//github.com/ysingh">Github</a>
