Added page with health notes:

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1><a href="index.html">Yudhishthir Singh<a></h1>
 </header>
 <main>
-    <h2><a href="/health.html">Health Notes</a></h2>
+    <h2><a href="/health.md">Health Notes</a></h2>
 <!-- <h2><a href="./resume.html">Resume</a></h2>
 <h2><a href="./blog/c-process-timers.md">Timing Processes in C</a></h2>
 <h2><a href="./blog/ecs.md">ECS Notes</a></h2>
